# fancy-backend

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: api.rs  main.rs  server.rs  weather.rs
api/src/api/: get_request_handler.rs  set_request_handler.rs
client-debug/: Cargo.toml
client-debug/src/: main.rs
crypto-service/: Cargo.toml
crypto-service/src/: encryption.rs
