[workspace.package]
version = "0.1.0"
authors = ["Skienex"]
edition = "2021"
license = "MIT"

[workspace]
resolver = "2"
members = [ "api",
    "crypto-service",
    "api"
, "client-debug"]

[workspace.dependencies]
anyhow = "1.0.79"
openssl = "0.10.63"
serde_json = "1.0.114"

[workspace.dependencies.pqcrypto]
version = "0.17.0"
default-features = false
features = ["pqcrypto-kyber", "pqcrypto-sphincsplus"]
