[package]
name = "api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-service = {path = "../crypto-service"}
anyhow.workspace = true
serde_json.workspace = true
openssl.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"